--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=38674600-a186-454b-a25f-ab3990e6985c" type="text/javascript"></script>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <div class="header__row header__row_top">
         <div class="container">
           <div class="header__select">
@@ -20,11 +20,216 @@
         </div>
       </div>
       <div class="header__row header__row_bottom">
-        <div class="container"><a class="header__logo" href="#"></a>
-          <div class="header__nav"><a class="header__nav-item" href="#">НАРК</a><a class="header__nav-item" href="#">НСПК</a><a class="header__nav-item" href="#">Документы</a><a class="header__nav-item" href="#">Контакты</a></div><a class="header__link header__link_search" href="#">Поиск</a><a class="header__link header__link_office" href="#">Мой кабинет</a>
+        <div class="container"><a class="header__logo" href="/"></a>
+          <div class="header__nav"><a class="header__nav-item" href="#">НАРК</a><a class="header__nav-item" href="#">НСПК</a><a class="header__nav-item" href="#">Документы</a><a class="header__nav-item" href="#">Контакты</a></div>
+          <div class="header__search-wrapper"><a class="header__link header__link_search" href="#">Поиск</a>
+            <div class="search" id="search">
+              <button class="search__btn" type="submit"></button>
+              <input class="search__input" id="search__input" type="text" placeholder="Введите поисковой запрос"><a class="search__close" href="#"></a>
+              <div class="search__autocomplete">
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в области сварки</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">300</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в области финансового рынка</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">23</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в строительстве</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">150</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в наноиндустрии</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">221</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в здравоохранении</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">335</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в области информационных технологий</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">10</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в сфере гостепреимства</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">279</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в области сварки</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">300</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в области финансового рынка</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">23</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в строительстве</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">150</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в наноиндустрии</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">221</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в здравоохранении</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">335</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в области информационных технологий</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">10</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в сфере гостепреимства</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">279</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">на железнодорожном транспорте</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">781</div>
+                </div>
+                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_regular">в лифтовой отрасли, сфере подъемных сооружений и вертикального транспорта</div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">605</div>
+                </div>
+              </div>
+            </div>
+          </div><a class="header__link header__link_office" href="#">Мой кабинет</a>
         </div>
       </div>
-    </div>
+      <div class="other-sites">
+        <div class="container">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <div class="other-sites__tabs">
+                <div class="other-sites__tabs-item">
+                  <div class="other-sites__tabs-item-title">Минтруд России</div>
+                  <div class="other-sites__tabs-item-descr">Министерство труда и&nbsp;социальной защиты&nbsp;РФ</div>
+                </div>
+                <div class="other-sites__tabs-item">
+                  <div class="other-sites__tabs-item-title">Национальный совет</div>
+                  <div class="other-sites__tabs-item-descr">Сайт Национального совета при Президенте РФ<br>по&nbsp;профессионым квалификациям</div>
+                </div>
+                <div class="other-sites__tabs-item other-sites__tabs-item_active">
+                  <div class="other-sites__tabs-item-title">Реестр</div>
+                  <div class="other-sites__tabs-item-descr">Реестр сведений о&nbsp;проведении независимой<br>оценке квалификации</div>
+                </div>
+                <div class="other-sites__tabs-item">
+                  <div class="other-sites__tabs-item-title">ПМК &laquo;Разработка квалификаций&raquo;</div>
+                  <div class="other-sites__tabs-item-descr">Программно-методический комплекс разработки<br>профессиональных квалификаций</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="other-sites__content">
+                <div class="other-sites__content-item">
+                  <div class="other-sites__content-item-title">Портал госуслуг 1</div>
+                  <div class="other-sites__content-item-text">Портал откртых данных Российской федерации&nbsp;&mdash; это один из&nbsp;ключевых инструментов реализации государственной политики в&nbsp;области открытых данных, которому отводится роль системообразующего элемента, ядра экосистемы открытых данных Российской Федерации</div>
+                  <div class="other-sites__descr">
+                    <div class="other-sites__title">Контакты</div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Адрес для корреспонденции:</div>
+                      <div class="other-sites__link other-sites__link_address">109240, Москва, Котельническая набережная д.17<br>(В&nbsp;РСПП для АНО &laquo;НАРК&raquo;)</div>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">E-mail:</div><a class="other-sites__link other-sites__link_email" href="mailto:nok-nark@nark.ru">nok-nark@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div><a class="other-sites__link other-sites__link_email" href="mailto:pr@nark.ru">pr@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div>
+                      <div class="other-sites__text-link"><a class="other-sites__link other-sites__link_phone" href="tel:+74959661686">+7 (495) 966-16-86</a>&nbsp;&nbsp;(доб. 1019 или 1026)</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="other-sites__content-item other-sites__content-item_active">
+                  <div class="other-sites__content-item-title">Портал госуслуг</div>
+                  <div class="other-sites__content-item-text">Портал откртых данных Российской федерации&nbsp;&mdash; это один из&nbsp;ключевых инструментов реализации государственной политики в&nbsp;области открытых данных, которому отводится роль системообразующего элемента, ядра экосистемы открытых данных Российской Федерации. Портал откртых данных Российской федерации&nbsp;&mdash; это один из&nbsp;ключевых инструментов реализации государственной политики в&nbsp;области открытых данных, которому отводится роль системообразующего элемента, ядра экосистемы открытых данных Российской Федерации. Портал откртых данных Российской федерации&nbsp;&mdash; это один из&nbsp;ключевых инструментов реализации государственной политики в&nbsp;области открытых данных, которому отводится роль системообразующего элемента, ядра экосистемы открытых данных Российской Федерации.</div>
+                  <div class="other-sites__descr">
+                    <div class="other-sites__title">Контакты</div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Адрес для корреспонденции:</div>
+                      <div class="other-sites__link other-sites__link_address">109240, Москва, Котельническая набережная д.17<br>(В&nbsp;РСПП для АНО &laquo;НАРК&raquo;)</div>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">E-mail:</div><a class="other-sites__link other-sites__link_email" href="mailto:nok-nark@nark.ru">nok-nark@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div><a class="other-sites__link other-sites__link_email" href="mailto:pr@nark.ru">pr@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div>
+                      <div class="other-sites__text-link"><a class="other-sites__link other-sites__link_phone" href="tel:+74959661686">+7 (495) 966-16-86</a>&nbsp;&nbsp;(доб. 1019 или 1026)</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="other-sites__content-item">
+                  <div class="other-sites__content-item-title">Портал госуслуг 3</div>
+                  <div class="other-sites__content-item-text">Портал откртых данных Российской федерации&nbsp;&mdash; это один из&nbsp;ключевых инструментов реализации государственной политики в&nbsp;области открытых данных, которому отводится роль системообразующего элемента, ядра экосистемы открытых данных Российской Федерации</div>
+                  <div class="other-sites__descr">
+                    <div class="other-sites__title">Контакты</div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Адрес для корреспонденции:</div>
+                      <div class="other-sites__link other-sites__link_address">109240, Москва, Котельническая набережная д.17<br>(В&nbsp;РСПП для АНО &laquo;НАРК&raquo;)</div>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">E-mail:</div><a class="other-sites__link other-sites__link_email" href="mailto:nok-nark@nark.ru">nok-nark@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div><a class="other-sites__link other-sites__link_email" href="mailto:pr@nark.ru">pr@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div>
+                      <div class="other-sites__text-link"><a class="other-sites__link other-sites__link_phone" href="tel:+74959661686">+7 (495) 966-16-86</a>&nbsp;&nbsp;(доб. 1019 или 1026)</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="other-sites__content-item">
+                  <div class="other-sites__content-item-title">Портал госуслуг 4</div>
+                  <div class="other-sites__content-item-text">Портал откртых данных Российской федерации&nbsp;&mdash; это один из&nbsp;ключевых инструментов реализации государственной политики в&nbsp;области открытых данных, которому отводится роль системообразующего элемента, ядра экосистемы открытых данных Российской Федерации</div>
+                  <div class="other-sites__descr">
+                    <div class="other-sites__title">Контакты</div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Адрес для корреспонденции:</div>
+                      <div class="other-sites__link other-sites__link_address">109240, Москва, Котельническая набережная д.17<br>(В&nbsp;РСПП для АНО &laquo;НАРК&raquo;)</div>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">E-mail:</div><a class="other-sites__link other-sites__link_email" href="mailto:nok-nark@nark.ru">nok-nark@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div><a class="other-sites__link other-sites__link_email" href="mailto:pr@nark.ru">pr@nark.ru</a>
+                    </div>
+                    <div class="other-sites__item">
+                      <div class="other-sites__subtitle">Пресс-служба:</div>
+                      <div class="other-sites__text-link"><a class="other-sites__link other-sites__link_phone" href="tel:+74959661686">+7 (495) 966-16-86</a>&nbsp;&nbsp;(доб. 1019 или 1026)</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <header class="header-mobile">
+      <div class="container"><a class="header-mobile__logo" href="/"></a></div>
+    </header>
     <div class="cover">
       <div class="container">
         <h1 class="cover__title">Реестр сведений о проведении<br>независимой оценки квалификации</h1>
@@ -223,7 +428,7 @@
       </div>
       <div class="map__container" id="map"></div>
     </div>
-    <div class="footer">
+    <footer class="footer">
       <div class="footer__row footer__row_top">
         <div class="container">
           <div class="row">
@@ -256,7 +461,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
     <script src="js/app-project.js"></script>
   </body>
 </html>
