--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
               <div class="footer__contacts">
                 <div class="footer__title">Служба поддержки</div>
                 <div class="footer__contacts-item"><a class="footer__link" href="tel:+74959661686">+7 (495) 966-16-86</a><a class="footer__link" href="mailto:nok-nark@nark.ru">nok-nark@nark.ru</a></div>
-                <div class="footer__contacts-item"><a class="footer__link footer__link_email" href="#">Задать вопрос</a><a class="footer__link footer__link_question" href="#">Справка</a><a class="footer__link footer__link_blank" href="#">Лицензия</a></div>
+                <div class="footer__contacts-item"><a class="footer__link footer__link_email" href="#">Задать&nbsp;вопрос</a><a class="footer__link footer__link_question" href="#">Справка</a><a class="footer__link footer__link_blank" href="#">Лицензия</a></div>
               </div>
             </div>
           </div>
