--- a/index.html
+++ b/index.html
@@ -26,88 +26,55 @@
             <div class="search" id="search">
               <div class="search__btn"></div>
               <input class="search__input" id="search__input" type="text" placeholder="Введите поисковой запрос" value=""><a class="search__close" href="#"></a>
-              <div class="search__autocomplete">
-                <div class="search__autocomplete-item">
+              <div class="search__autocomplete"><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в области сварки</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">300</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">300</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в области финансового рынка</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">23</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">23</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в строительстве</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">150</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">150</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в наноиндустрии</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">221</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">221</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в здравоохранении</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">335</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">335</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в области информационных технологий</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">10</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">10</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в сфере гостепреимства</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">279</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">279</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в области сварки</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">300</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">300</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в области финансового рынка</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">23</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">23</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в строительстве</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">150</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">150</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в наноиндустрии</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">221</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">221</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в здравоохранении</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">335</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">335</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в области информационных технологий</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">10</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">10</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в сфере гостепреимства</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">279</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">279</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">на железнодорожном транспорте</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">781</div>
-                </div>
-                <div class="search__autocomplete-item">
+                  <div class="search__autocomplete-text search__autocomplete-text_number">781</div></a><a class="search__autocomplete-item" href="#">
                   <div class="search__autocomplete-text search__autocomplete-text_bold">СПК</div>
                   <div class="search__autocomplete-text search__autocomplete-text_regular">в лифтовой отрасли, сфере подъемных сооружений и вертикального транспорта</div>
-                  <div class="search__autocomplete-text search__autocomplete-text_number">605</div>
-                </div>
-              </div>
+                  <div class="search__autocomplete-text search__autocomplete-text_number">605</div></a></div>
             </div>
           </div><a class="header__link header__link_office" href="#">Мой кабинет</a><a class="header__link header__link_exit" href="#"></a>
         </div>
@@ -233,89 +200,56 @@
           <div class="header-mobile__menu-btn-item"></div></a></div>
       <div class="search-mobile" id="search-mobile">
         <div class="search-mobile__btn"></div>
-        <input class="search-mobile__input" id="search__input" type="text" placeholder="Введите поисковой запрос" value=""><a class="search-mobile__close" href="#"></a>
-        <div class="search-mobile__autocomplete">
-          <div class="search-mobile__autocomplete-item">
+        <input class="search-mobile__input" id="search-mobile__input" type="text" placeholder="Введите поисковой запрос" value=""><a class="search-mobile__close" href="#"></a>
+        <div class="search-mobile__autocomplete"><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в области сварки</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">300</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">300</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в области финансового рынка</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">23</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">23</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в строительстве</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">150</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">150</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в наноиндустрии</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">221</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">221</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в здравоохранении</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">335</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">335</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в области информационных технологий</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">10</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">10</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в сфере гостепреимства</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">279</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">279</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в области сварки</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">300</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">300</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в области финансового рынка</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">23</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">23</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в строительстве</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">150</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">150</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в наноиндустрии</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">221</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">221</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в здравоохранении</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">335</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">335</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в области информационных технологий</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">10</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">10</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в сфере гостепреимства</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">279</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">279</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">на железнодорожном транспорте</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">781</div>
-          </div>
-          <div class="search-mobile__autocomplete-item">
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">781</div></a><a class="search-mobile__autocomplete-item" href="#">
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_bold">СПК</div>
             <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_regular">в лифтовой отрасли, сфере подъемных сооружений и вертикального транспорта</div>
-            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">605</div>
-          </div>
-        </div>
+            <div class="search-mobile__autocomplete-text search-mobile__autocomplete-text_number">605</div></a></div>
       </div>
       <nav class="nav-mobile">
         <div class="nav-mobile__list nav-mobile__list_primary">
