--- a/ui.html
+++ b/ui.html
@@ -791,7 +791,7 @@
                   </div>
                   <nav class="nav-mobile">
                     <div class="nav-mobile__list nav-mobile__list_primary">
-                      <div class="nav-mobile__item"><a class="nav-mobile__link nav-mobile__link_enter" href="#">Войти</a><a class="nav-mobile__link nav-mobile__link_search" href="#">Поиск</a></div>
+                      <div class="nav-mobile__item"><a class="nav-mobile__link nav-mobile__link_enter" href="#">Войти</a></div>
                       <div class="nav-mobile__item"><a class="nav-mobile__link" href="#">НСПК</a><a class="nav-mobile__link nav-mobile__link_active" href="#">НАРК</a><a class="nav-mobile__link" href="#">Документы</a><a class="nav-mobile__link" href="#">Контакты</a><a class="nav-mobile__link nav-mobile__link_other-sites" href="#">Другие сайты НОК</a></div>
                     </div>
                     <div class="nav-mobile__list nav-mobile__list_other-sites">
@@ -1017,7 +1017,7 @@
               <div class="ui__col">
                 <nav class="nav-mobile">
                   <div class="nav-mobile__list nav-mobile__list_primary">
-                    <div class="nav-mobile__item"><a class="nav-mobile__link nav-mobile__link_enter" href="#">Войти</a><a class="nav-mobile__link nav-mobile__link_search" href="#">Поиск</a></div>
+                    <div class="nav-mobile__item"><a class="nav-mobile__link nav-mobile__link_enter" href="#">Войти</a></div>
                     <div class="nav-mobile__item"><a class="nav-mobile__link" href="#">НСПК</a><a class="nav-mobile__link nav-mobile__link_active" href="#">НАРК</a><a class="nav-mobile__link" href="#">Документы</a><a class="nav-mobile__link" href="#">Контакты</a><a class="nav-mobile__link nav-mobile__link_other-sites" href="#">Другие сайты НОК</a></div>
                   </div>
                   <div class="nav-mobile__footer">
