--- a/send-appellation.html
+++ b/send-appellation.html
@@ -368,6 +368,28 @@
         </div>
       </nav>
     </header>
+    <div class="send-appellation">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 offset-1">1</div>
+          <div class="col-lg-4">
+            <sidebar class="centers__sidebar"><a class="centers__sidebar-item centers__sidebar-item_recommendations" href="#">Советы по&nbsp;проф. квалификациям</a><a class="centers__sidebar-item centers__sidebar-item_centers" href="#">Центры оценки квалификации</a><a class="centers__sidebar-item centers__sidebar-item_certificates" href="#">Свидетельства и&nbsp;заключения</a><a class="centers__sidebar-item centers__sidebar-item_statistics" href="#">Статистика внедрения НОК</a><a class="centers__sidebar-item centers__sidebar-item_search" href="#">Найти экзаменационную площадку</a><a class="centers__sidebar-item centers__sidebar-item_appeal centers__sidebar-item_active" href="#">Подать аппеляцию</a><a class="centers__sidebar-item centers__sidebar-item_prof" href="#">Профессиональные квалификации</a><a class="centers__sidebar-item centers__sidebar-item_tools" href="#">Оценочные средства</a><a class="centers__sidebar-item centers__sidebar-item_cpk" href="#">Стать СПК</a><a class="centers__sidebar-item centers__sidebar-item_cok" href="#">Стать ЦОК</a></sidebar>
+            <select class="centers__sidebar centers__sidebar_mobile select-default">
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_recommendations" value="0"><i class="centers__sidebar-item-icon"></i>Советы по&nbsp;проф. квалификациям</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_centers" value="1"><i class="centers__sidebar-item-icon"></i>Центры оценки квалификации</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_certificates" value="2"><i class="centers__sidebar-item-icon"></i>Свидетельства и&nbsp;заключения</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_statistics" value="3"><i class="centers__sidebar-item-icon"></i>Статистика внедрения НОК</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_search" value="4"><i class="centers__sidebar-item-icon"></i>Найти экзаменационную площадку</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_appeal" value="5"><i class="centers__sidebar-item-icon"></i>Подать аппеляцию</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_prof" value="6" selected><i class="centers__sidebar-item-icon"></i>Профессиональные квалификации</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_tools" value="7"><i class="centers__sidebar-item-icon"></i>Оценочные средства</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_cpk" value="8"><i class="centers__sidebar-item-icon"></i>Стать СПК</option>
+              <option class="centers__sidebar-item centers__sidebar-item_mobile centers__sidebar-item_cok" value="9"><i class="centers__sidebar-item-icon"></i>Стать ЦОК</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footer__row footer__row_top">
         <div class="container">
