--- a/centers.html
+++ b/centers.html
@@ -456,48 +456,49 @@
                 <div class="centers__list-item">
                   <div class="centers__list-item-title">ООО &laquo;Центр оценки квалификации&raquo;</div>
                   <div class="centers__list-item-descr">Регион: Республика Башкортостан</div>
-                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="mailto:spk.naks.ru">spk.naks.ru</a></div>
+                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="spk.naks.ru">spk.naks.ru</a></div>
                   <div class="centers__list-item-text"><span class="centers__list-item-text-content">Совет по профессиональным квалификациям:</span><a class="centers__list-item-text-link" href="#">СПК офисных специалистов и вспомогательных административных работников</a></div><a class="centers__list-item-link" href="#">Подробнее</a>
                   <div class="centers__list-number">02.001</div>
                 </div>
                 <div class="centers__list-item">
                   <div class="centers__list-item-title">ООО &laquo;Центр оценки квалификации&raquo;</div>
                   <div class="centers__list-item-descr">Регион: Республика Башкортостан</div>
-                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="mailto:spk.naks.ru">spk.naks.ru</a></div>
+                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="spk.naks.ru">spk.naks.ru</a></div>
                   <div class="centers__list-item-text"><span class="centers__list-item-text-content">Совет по профессиональным квалификациям:</span><a class="centers__list-item-text-link" href="#">СПК офисных специалистов и вспомогательных административных работников</a></div><a class="centers__list-item-link" href="#">Подробнее</a>
                   <div class="centers__list-number">02.001</div>
                 </div>
                 <div class="centers__list-item">
                   <div class="centers__list-item-title">ООО &laquo;Центр оценки квалификации&raquo;</div>
                   <div class="centers__list-item-descr">Регион: Республика Башкортостан</div>
-                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="mailto:spk.naks.ru">spk.naks.ru</a></div>
+                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="spk.naks.ru">spk.naks.ru</a></div>
                   <div class="centers__list-item-text"><span class="centers__list-item-text-content">Совет по профессиональным квалификациям:</span><a class="centers__list-item-text-link" href="#">СПК офисных специалистов и вспомогательных административных работников</a></div><a class="centers__list-item-link" href="#">Подробнее</a>
                   <div class="centers__list-number">02.001</div>
                 </div>
                 <div class="centers__list-item">
                   <div class="centers__list-item-title">ООО &laquo;Центр оценки квалификации&raquo;</div>
                   <div class="centers__list-item-descr">Регион: Республика Башкортостан</div>
-                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="mailto:spk.naks.ru">spk.naks.ru</a></div>
+                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="spk.naks.ru">spk.naks.ru</a></div>
                   <div class="centers__list-item-text"><span class="centers__list-item-text-content">Совет по профессиональным квалификациям:</span><a class="centers__list-item-text-link" href="#">СПК офисных специалистов и вспомогательных административных работников</a></div><a class="centers__list-item-link" href="#">Подробнее</a>
                   <div class="centers__list-number">02.001</div>
                 </div>
                 <div class="centers__list-item">
                   <div class="centers__list-item-title">ООО &laquo;Центр оценки квалификации&raquo;</div>
                   <div class="centers__list-item-descr">Регион: Республика Башкортостан</div>
-                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="mailto:spk.naks.ru">spk.naks.ru</a></div>
+                  <div class="centers__list-item-contacts"><a class="centers__list-item-contacts-item centers__list-item-contacts-item_phone" href="tel:+74997847700">+7 (499) 784-77-00</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_letter" href="mailto:tik364@naks.ru">tik364@naks.ru</a><a class="centers__list-item-contacts-item centers__list-item-contacts-item_link" href="spk.naks.ru">spk.naks.ru</a></div>
                   <div class="centers__list-item-text"><span class="centers__list-item-text-content">Совет по профессиональным квалификациям:</span><a class="centers__list-item-text-link" href="#">СПК офисных специалистов и вспомогательных административных работников</a></div><a class="centers__list-item-link" href="#">Подробнее</a>
                   <div class="centers__list-number">02.001</div>
                 </div>
               </div>
               <div class="pagination">
                 <div class="pagination__container">
-                  <div class="pagination__col pagination__col">
+                  <div class="pagination__col"><a class="pagination__btn pagination__btn_back pagination__btn_disable" href="#">Назад</a></div>
+                  <div class="pagination__col">
                     <form class="pagination__form">
                       <input class="pagination__input-text" type="text" value="1" placeholder="">
                       <div class="pagination__text">из</div><a class="pagination__link" href="#">37</a>
                     </form>
                   </div>
-                  <div class="pagination__col pagination__col"><a class="pagination__btn" href="#">Далее</a></div>
+                  <div class="pagination__col"><a class="pagination__btn" href="#">Далее</a></div>
                 </div>
               </div>
             </div>
