Finish layouts (Отправить апелляцию, Проф. квалификации)

--- a/ui2.html
+++ b/ui2.html
@@ -15,11 +15,16 @@
       </div>
       <div class="ui__container">
         <div class="ui__col-global ui__col-global_left">
-          <div class="ui__subtitle ui__subtitle_line">Desktop</div>
+          <div class="ui__subtitle ui__subtitle_line ui__subtitle_indent-bottom-29">Desktop</div>
           <div class="ui__item">
             <div class="ui__row">
               <div class="ui__col">
-                <div class="ui__title"></div>H1 Header two line<br>words description
+                <h1 class="ui__typo-title ui__typo-title_h1">H1 Header two line<br>words description</h1>
+                <h2 class="ui__typo-title ui__typo-title_h2">H2 Header two line<br>words description</h2>
+                <h3 class="ui__typo-title ui__typo-title_h3">H3 Header two line<br>words description</h3>
+                <h4 class="ui__typo-title ui__typo-title_h4">H4 Header two line<br>words description</h4>
+                <h5 class="ui__typo-title ui__typo-title_h5">H5 Header two line<br>words description</h5>
+                <h6 class="ui__typo-title ui__typo-title_h6">H6 Header two line<br>words description</h6>
               </div>
             </div>
           </div>
@@ -28,9 +33,13 @@
           <div class="ui__subtitle ui__subtitle_line">Mobile</div>
           <div class="ui__item">
             <div class="ui__row">
-              <div class="ui__col">
-                <div class="ui__title"></div>H1 Header two line<br>words description
-              </div>
+              <div class="ui__col"></div>
+              <h1 class="ui__typo-title ui__typo-title_h1 ui__typo-title_mobile">H1 Header two line<br>words description</h1>
+              <h2 class="ui__typo-title ui__typo-title_h2 ui__typo-title_mobile">H2 Header two line<br>words description</h2>
+              <h3 class="ui__typo-title ui__typo-title_h3 ui__typo-title_mobile">H3 Header two line<br>words description</h3>
+              <h4 class="ui__typo-title ui__typo-title_h4 ui__typo-title_mobile">H4 Header two line<br>words description</h4>
+              <h5 class="ui__typo-title ui__typo-title_h5 ui__typo-title_mobile">H5 Header two line<br>words description</h5>
+              <h6 class="ui__typo-title ui__typo-title_h6 ui__typo-title_mobile">H6 Header two line<br>words description</h6>
             </div>
           </div>
         </div>
