--- a/404.html
+++ b/404.html
@@ -371,7 +371,7 @@
     <div class="page-not-found">
       <div class="page-not-found__container">
         <div class="page-not-found__title">404</div>
-        <div class="page-not-found__text">Страница не&nbsp;найдена<br>или ещё не&nbsp;создана</div><a class="page-not-found__btn" href="/">На главную</a>
+        <div class="page-not-found__text">Страница не&nbsp;найдена&nbsp;<br>или ещё не&nbsp;создана</div><a class="page-not-found__btn" href="/">На главную</a>
       </div>
     </div>
     <footer class="footer">
